--- a/nvme-rhel-82.adoc
+++ b/nvme-rhel-82.adoc
@@ -34,96 +34,210 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 include::_include/nvme/enable-san-booting.adoc[]
 
-== Enable NVMe/FC 
+== Step 2: Validate software versions
 
-You can use the following procedure to enable NVMe/FC.
+You can use the following procedure to validate the minimum supported RHEL 8.3 software versions.
 
 .Steps
 
-. Install Red Hat Enterprise Linux 8.2 GA on the server.
+. Install RHEL 8.3 on the server. After the installation is complete, verify that you are running the specified RHEL 8.3 kernel: 
 +
-. If you are upgrading from RHEL 8.1 to RHEL 8.2 using `yum update/upgrade`, your `/etc/nvme/host*` files might be lost. To avoid the file loss, do the following:
-
-include::_include/nvme/reuse_nvme_enabling_step1_substeps.adoc[]
-
-. After the installation is complete, verify that you are running the specified Red Hat Enterprise Linux kernel.
+[source,cli]
+----
+uname -r
+----
++
+The following example shows a RHEL 8.3 kernel version:
 +
 ----
-# uname -r
 4.18.0-193.el8.x86_64
 ----
-+
-See the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^] for the current list of supported versions.
 
-. Install the nvme-cli package.
+. Install the nvme-cli package:
++
+[source,cli]
+----
+rpm -qa|grep nvme-cli
+----
++
+The following example shows an nvme-cli package version:
 +
 ----
-# rpm -qa|grep nvme-cli
 nvme-cli-1.9.5.el8.x86_64
 ----
 
-. Enable in-kernel NVMe multipath.
+. Enable in-kernel NVMe multipath:
 +
+[source,cli]
 ----
-# grubby –args=nvme_core.multipath=Y –update-kernel /boot/vmlinuz-4.18.0-193.el8.x86_64
+grubby –args=nvme_core.multipath=Y –update-kernel /boot/vmlinuz-4.18.0-193.el8.x86_64
 ----
 
-.	On the RHEL 8.2 host, check the host NQN string at `/etc/nvme/hostnqn` and verify that it matches the host NQN string for the corresponding subsystem on the ONTAP array.
+. On the RHEL 8.2 host, check the host NQN string at `/etc/nvme/hostnqn`:
++
+[source,cli]
+----
+cat /etc/nvme/hostnqn
+----
++
+The following example shows a hostnqn string:
 +
 ----
-# cat /etc/nvme/hostnqn
 nqn.2014-08.org.nvmexpress:uuid:9ed5b327-b9fc-4cf5-97b3-1b5d986345d1
+----
 
-
-::> vserver nvme subsystem host show -vserver vs_fcnvme_141
+. On the RHEL 8.2 host, check the hostnqn string at `/etc/nvme/hostnqn`:
++
+[source,cli]
+----
+vserver nvme subsystem host show -vserver vs_fcnvme_141
+----
++
+.Show example
+[%collapsible]
+====
+----
 Vserver      Subsystem        Host           NQN
 ----------- --------------- ----------- ---------------
   vs_fcnvme_141
     nvme_141_1
         nqn.2014-08.org.nvmexpress:uuid:9ed5b327-b9fc-4cf5-97b3-1b5d986345d1
 ----
+====
 +
-If the host NQN strings do not match, use the `vserver modify` command to update the host NQN string on the corresponding ONTAP array subsystem to match to host NQN string from `/etc/nvme/hostnqn` on the host.
+[NOTE] If the host NQN strings do not match, use the `vserver modify` command to update the host NQN string on the corresponding ONTAP array subsystem to match the host NQN string from `/etc/nvme/hostnqn` on the host.
 
 . Reboot the host.
+
+. Optionally, update the `enable_foreign` setting.
 +
-. Update the `enable_foreign` setting _(optional)_.
-+
+[NOTE]
+====
 If you intend to run both NVMe and SCSI traffic on the same RHEL 8.2 host, NetApp recommends using in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. You should also blacklist the ONTAP namespaces in dm-multipath to prevent dm-multipath from claiming these namespace devices. You can do this by adding the `enable_foreign` setting to the `/etc/multipath.conf`, as shown below.
-+
+
 ----
-# cat /etc/multipath.conf
+cat /etc/multipath.conf
 defaults {
    enable_foreign NONE
 }
 ----
+Restart the multipathd daemon by running a `systemctl restart multipathd`.
+====
 
-. Restart the multipathd daemon by running a `systemctl restart multipathd`.
+== Step 3: Configure NVMe/FC for Broadcom/Emulex
 
-== Configure the Broadcom FC adapter for NVMe/FC
+You can configure NVMe/FC for Broadcom/Emulex.
 
-You can use the following procedure to configure a Broadcom FC adapter.
+.Steps
 
-include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part1.adoc[]
+. Verify that you are using the supported adapter model:
 
-. Verify that you are using the recommended Broadcom lpfc firmware as well as the inbox driver.
+.. Display the model names:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/modelname
+----
++
+You should see the following output:
 +
 ----
-# cat /sys/class/scsi_host/host*/fwrev
-12.6.182.8, sli-4:2:c
-12.6.182.8, sli-4:2:c
-----
-+
-----
-# cat /sys/module/lpfc/version
-0:12.6.0.2
+LPe32002-M2
+LPe32002-M2
 ----
 
-include::_include/nvme/reuse_configuring_broadcom_for_rhel_nvme_part2.adoc[]
+.. Display the model descriptions:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/modeldesc
+----
++
+You should see output similar to:
++
+----
+Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
+Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
+----
+
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
++
+[source,cli]
+----
+cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
+----
+
+. Verify that the initiator ports are up and running and can see the target LIFs:
++
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_name
+----
++
+You should see output similar to:
++
+----
+0x100000109b1c1204
+0x100000109b1c1205
+----
+
+. Verify that your initiator ports are online:
++
+[source,cli]
+----
+cat /sys/class/fc_host/host*/port_state
+----
++
+You should see the following output:
++
+----
+Online
+Online
+----
+
+. Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
++
+[source,cli]
+----
+cat /sys/class/scsi_host/host*/nvme_info
+----
++
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
+----
+NVME Initiator Enabled
+XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
+NVME LPORT lpfc0 WWPN x100000109b1c1204 WWNN x200000109b1c1204 DID x011d00 *ONLINE*
+NVME RPORT WWPN x203800a098dfdd91 WWNN x203700a098dfdd91 DID x010c07 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x203900a098dfdd91 WWNN x203700a098dfdd91 DID x011507 *TARGET DISCSRVC ONLINE*
+
+NVME Statistics
+LS: Xmt 0000000f78 Cmpl 0000000f78 Abort 00000000
+LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 000000002fe29bba Issue 000000002fe29bc4 OutIO 000000000000000a
+abort 00001bc7 noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 00001e15 Err 0000d906
+
+NVME Initiator Enabled
+XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
+NVME LPORT lpfc1 WWPN x100000109b1c1205 WWNN x200000109b1c1205 DID x011900 *ONLINE*
+NVME RPORT WWPN x203d00a098dfdd91 WWNN x203700a098dfdd91 DID x010007 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x203a00a098dfdd91 WWNN x203700a098dfdd91 DID x012a07 *TARGET DISCSRVC ONLINE*
+
+NVME Statistics
+LS: Xmt 0000000fa8 Cmpl 0000000fa8 Abort 00000000
+LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
+Total FCP Cmpl 000000002e14f170 Issue 000000002e14f17a OutIO 000000000000000a
+abort 000016bb noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
+FCP CMPL: xb 00001f50 Err 0000d9f8
+----
+====
 
 == Step 4: Optionally, enable 1MB I/O 
 
-include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
+include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
 ==	Validate NVMe/FC
 
