--- a/nvme-rhel-86.adoc
+++ b/nvme-rhel-86.adoc
@@ -133,12 +133,12 @@ defaults {
 Restart the multipathd daemon by running a `systemctl restart multipathd` command to allow the new setting to take effect.
 ====
 
-== Configure NVMe/FC
+== Step 3: Configure NVMe/FC
 
 You can configure NVMe/FC for Broadcom/Emulex or Marvell/QLogic adapters.
 
 [role="tabbed-block"]
-====
+=====
 .Broadcom/Emulex
 --
 Configure NVMe/FC for a Broadcom/Emulex adapter.
@@ -146,97 +146,118 @@ Configure NVMe/FC for a Broadcom/Emulex adapter.
 .Steps
 
 . Verify that you are using the supported adapter model:
+
+.. Display the model names:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/modelname
 ----
++
 You should see output similar to:
++
 ----
 LPe32002-M2
 LPe32002-M2
 ----
 
-. Display the model descriptions:
+.. Display the model descriptions:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/modeldesc
 ----
++
 You should see output similar to:
++
 ----
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 ----
 
-. Display the firmware version:
+. Verify that you are using the recommended Broadcom `lpfc` firmware and inbox driver:
+
+.. Display the firmware version:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/fwrev
 ----
++
 The following example shows firmware versions:
++
 ----
 12.8.351.47, sli-4:2:c
 12.8.351.47, sli-4:2:c
 ----
 
-. Display the inbox driver version:
+.. Display the inbox driver version:
++
 [source,cli]
 ----
 cat /sys/module/lpfc/version
 ----
++
 The following example shows a driver version:
++
 ----
 0:14.0.0.4
 ----
-
++
 For the current list of supported adapter driver and firmware versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-. Verify that the expected output of lpfc_enable_fc4_type is set to 3:
+. Verify that the expected output of `lpfc_enable_fc4_type` is set to `3`:
++
 [source,cli]
 ----
 cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 ----
-Expected output:
-----
-3
-----
 
 . Verify that you can view your initiator ports:
++
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/port_name
 ----
++
 You should see output similar to:
++
 ----
 0x100000109b1c1204
 0x100000109b1c1205
 ----
 
 . Verify that your initiator ports are online:
++
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/port_state
 ----
-Expected output:
++
+You should see the following output:
++
 ----
 Online
 Online
 ----
 
 . Verify that the NVMe/FC initiator ports are enabled and that the target ports are visible:
++
 [source,cli]
 ----
 cat /sys/class/scsi_host/host*/nvme_info
 ----
++
 .Show example
 [%collapsible]
-=====
+====
 [subs=+quotes]
 ----
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b1c1204 WWNN x200000109b1c1204 DID x011d00 ONLINE
-NVME RPORT WWPN x203800a098dfdd91 WWNN x203700a098dfdd91 DID x010c07 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x203900a098dfdd91 WWNN x203700a098dfdd91 DID x011507 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc0 WWPN x100000109b1c1204 WWNN x200000109b1c1204 DID x011d00 *ONLINE*
+NVME RPORT WWPN x203800a098dfdd91 WWNN x203700a098dfdd91 DID x010c07 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x203900a098dfdd91 WWNN x203700a098dfdd91 DID x011507 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000f78 Cmpl 0000000f78 Abort 00000000
@@ -247,9 +268,9 @@ FCP CMPL: xb 00001e15 Err 0000d906
 
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b1c1205 WWNN x200000109b1c1205 DID x011900 ONLINE
-NVME RPORT WWPN x203d00a098dfdd91 WWNN x203700a098dfdd91 DID x010007 TARGET DISCSRVC ONLINE
-NVME RPORT WWPN x203a00a098dfdd91 WWNN x203700a098dfdd91 DID x012a07 TARGET DISCSRVC ONLINE
+NVME LPORT lpfc1 WWPN x100000109b1c1205 WWNN x200000109b1c1205 DID x011900 *ONLINE*
+NVME RPORT WWPN x203d00a098dfdd91 WWNN x203700a098dfdd91 DID x010007 *TARGET DISCSRVC ONLINE*
+NVME RPORT WWPN x203a00a098dfdd91 WWNN x203700a098dfdd91 DID x012a07 *TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000fa8 Cmpl 0000000fa8 Abort 00000000
@@ -258,7 +279,7 @@ Total FCP Cmpl 000000002e14f170 Issue 000000002e14f17a OutIO 000000000000000a
 abort 000016bb noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00001f50 Err 0000d9f8
 ----
-=====
+====
 
 --
 .Marvell/QLogic
@@ -268,36 +289,44 @@ Configure NVMe/FC for a Marvell/QLogic adapter.
 .Steps
 
 . Verify that you are using the supported adapter model, driver, and firmware versions:
++
 [source,cli]
 ----
 cat /sys/class/fc_host/host*/symbolic_name
 ----
++
 You should see output similar to:
++
 ----
 QLE2742 FW:v9.06.02 DVR:v10.02.00.200-k
 QLE2742 FW:v9.06.02 DVR:v10.02.00.200-k
 ----
 
 . Verify that the recommended inbox qla2xxx driver is loaded:
++
 [source,cli]
 ----
 cat /sys/module/qla2xxx/version
 ----
-The expected output is the driver version included in the RHEL 8.6 kernel.
++
+You should see the following output:
++
+----
+The driver version included in the RHEL 8.6 kernel.
+----
 
-. Verify that ql2xnvmeenable is set to enable NVMe/FC initiator functionality:
+. Verify that `ql2xnvmeenable` is set. This enables the Marvell adapter to function as an NVMe/FC initiator:
++
 [source,cli]
 ----
 cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 ----
-Expected output:
-----
-1
-----
++
+The expected outptut is 1.
 --
-====
+=====
 
-== Step 3: Optionally, enable 1MB I/O 
+== Step 4: Optionally, enable 1MB I/O 
 
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
