fixing lipi errors

--- a/nvme-rhel-90.adoc
+++ b/nvme-rhel-90.adoc
@@ -11,7 +11,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.0 with ONTAP
 :linkattrs:
 :imagesdir: ./media/
 
-
+[.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
 .About this task 
