--- a/nvme-rhel-87.adoc
+++ b/nvme-rhel-87.adoc
@@ -331,16 +331,25 @@ The expected outptut is 1.
 
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
-== Configure NVMe/TCP
+== Step 5: Configure NVMe/TCP
 
-include::_include/nvme/reuse_configure_nvmetcp.adoc[]
+include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
 .Steps
 
-. Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
+. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
+[source,cli]
 ----
-# nvme discover -t tcp -w 192.168.211.5 -a 192.168.211.14 
+nvme discover -t tcp -w host-traddr -a traddr
+----
++
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
+----
+nvme discover -t tcp -w 192.168.211.5 -a 192.168.211.14 
 
 Discovery Log Number of Records 8, Generation counter 10 
 
@@ -430,25 +439,45 @@ traddr:  192.168.111.14
 sectype: none 
 [root@R650-13-79 ~]# 
 ----
+=====
 
-.	Verify that other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. For example:
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
 +
+[source,cli]
 ----
-# nvme discover -t tcp -w 192.168.211.5 -a 192.168.211.14
-# nvme discover -t tcp -w 192.168.211.5 -a 192.168.211.15 
-# nvme discover -t tcp -w 192.168.111.5 -a 192.168.111.14 
-# nvme discover -t tcp -w 192.168.111.5 -a 192.168.111.15  
-
+nvme discover -t tcp -w host-traddr -a traddr
 ----
-
-.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Ensure you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through `-l 1800`) during the connect-all so that it would retry for a longer period of time in the event of a path loss. For example:
 +
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
-# nvme connect-all -t tcp -w 192.168.211.5-a 192.168.211.14 -l 1800 
-# nvme connect-all -t tcp -w 192.168.211.5 -a 192.168.211.15 -l 1800 
-# nvme connect-all -t tcp -w 192.168.111.5 -a 192.168.111.14 -l 1800 
-# nvme connect-all -t tcp -w 192.168.111.5 -a 192.168.111.15 -l 1800 
+nvme discover -t tcp -w 192.168.211.5 -a 192.168.211.14
+nvme discover -t tcp -w 192.168.211.5 -a 192.168.211.15 
+nvme discover -t tcp -w 192.168.111.5 -a 192.168.111.14 
+nvme discover -t tcp -w 192.168.111.5 -a 192.168.111.15  
 ----
+====
+
+. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
++
+[source,cli]
+----
+nvme connect-all -t tcp -w host-traddr -a traddr -1 1800
+----
++
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
+----
+nvme connect-all -t tcp -w 192.168.211.5-a 192.168.211.14 -l 1800 
+nvme connect-all -t tcp -w 192.168.211.5 -a 192.168.211.15 -l 1800 
+nvme connect-all -t tcp -w 192.168.111.5 -a 192.168.111.14 -l 1800 
+nvme connect-all -t tcp -w 192.168.111.5 -a 192.168.111.15 -l 1800 
+----			
+=====
 
 == Validate NVMe-oF
 
