--- a/nvme-rhel-89.adoc
+++ b/nvme-rhel-89.adoc
@@ -322,26 +322,29 @@ The expected outptut is 1.
 --
 =====
 
-== Step 3: Optionally, enable 1MB I/O 
+== Step 4: Optionally, enable 1MB I/O 
 
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
-== Configure NVMe/TCP
+== Step 5: Configure NVMe/TCP
 
-include::_include/nvme/reuse_configure_nvmetcp.adoc[]
+include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
 .Steps
 
 . Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
+[source,cli]
 ----
 nvme discover -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
-+
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
 ----
-# nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.14 -l 1800
+nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.14 -l 1800
 
 Discovery Log Number of Records 8, Generation counter 18
 =====Discovery Log Entry 0======
@@ -363,46 +366,47 @@ portid:  1
 trsvcid: 8009
 subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b: discovery
 traddr:  192.168.111.15
-sectype: none ..........
-
-
+sectype: none
 ----
+=====
 
-. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data:
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
 +
+[source,cli]
 ----
 nvme discover -t tcp -w host-traddr -a traddr
 ----
 +
-*Example output:*
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
+----
+nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.14
+nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
+nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
+nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
+----
+====
+
+. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
+[source,cli]
 ----
-# nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.14
-# nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
-# nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
-# nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
-
-
-----
-
-. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
-+
-----
-nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
+nvme connect-all -t tcp -w host-traddr -a traddr -1 1800
 ----
 +
-*Example output:*
-+
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
 ----
-# nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.14	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.15	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.14	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.15	-l	1800
-
-
-----
-
-
+nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.14	-l	1800
+nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.15	-l	1800
+nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.14	-l	1800
+nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.15	-l	1800
+----			
+=====
 
 == Validate NVMe-oF
 
