--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -312,15 +312,25 @@ The expected output is:
 
 include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
-== Configure NVMe/TCP
+== Step 5: Configure NVMe/TCP
 
-include::_include/nvme/reuse_configure_nvmetcp.adoc[]
+include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
 .Steps
-. Verify whether the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
+
+. Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
+[source,cli]
 ----
-# nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
+nvme discover -t tcp -w host-traddr -a traddr
+----
++
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
+----
+nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
 
 Discovery Log Number of Records 10, Generation counter 119
 =====Discovery Log Entry 0======
@@ -344,24 +354,46 @@ treq: not specified
 trsvcid: 4420
  
 traddr: 192.168.2.56
-...
-.	Verify that the other NVMe/TCP initiator-target LIF combos can successfully fetch discovery log page data. For example:
+----
+=====
+
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
 +
+[source,cli]
+----
+nvme discover -t tcp -w host-traddr -a traddr
+----
++
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
 ----
 nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.51
 nvme discover -t tcp -w 192.168.1.8 -a 192.168.1.52
 nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.56
 nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
 ----
+====
 
-.	Run `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes. Make sure you set a longer `ctrl_loss_tmo` timer retry period (for example, 30 minutes, which can be set through `-l 1800`) while running the `connect-all` command so that it would retry for a longer period of time in the event of a path loss. For example:
+. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
+[source,cli]
+----
+nvme connect-all -t tcp -w host-traddr -a traddr
+----
++
+.Show example
+[%collapsible]
+=====
+[subs=+quotes]
 ----
 nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.51 -l 1800
 nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.52 -l 1800
 nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.56 -l 1800
 nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.57 -l 1800
-----
+----			
+=====
 
 == Validate NVMe-oF
 
