--- a/nvme-rhel-94.adoc
+++ b/nvme-rhel-94.adoc
@@ -301,12 +301,13 @@ include::_include/nvme/nvme-enabling-broadcom-1mb-size.adoc[]
 
 == Step 5: Configure NVMe/TCP
 
-The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP connect or connect-all operations manually.
+include::_include/nvme/nvme-configure-nvme-tcp.adoc[]
 
 .Steps
 
 . Verify that the initiator port can fetch the discovery log page data across the supported NVMe/TCP LIFs:
 +
+[source,cli]
 ----
 nvme discover -t tcp -w host-traddr -a traddr
 ----
@@ -316,7 +317,7 @@ nvme discover -t tcp -w host-traddr -a traddr
 ====
 [subs=+quotes]
 ----
-# nvme discover -t tcp -w 192.168.167.1 -a 192.168.167.16
+nvme discover -t tcp -w 192.168.167.1 -a 192.168.167.16
 
 Discovery Log Number of Records 8, Generation counter 10
 =====Discovery Log Entry 0======
@@ -412,10 +413,11 @@ traddr:  192.168.166.7
 eflags:  none
 sectype: none
 ----
-====
+=====
 
-. Verify that the other NVMe/TCP initiator-target LIF combinations are able to successfully fetch discovery log page data: 
+. Verify that the other NVMe/TCP initiator-target LIF combinations can successfully fetch discovery log page data: 
 +
+[source,cli]
 ----
 nvme discover -t tcp -w host-traddr -a traddr
 ----
@@ -434,21 +436,22 @@ nvme discover -t tcp -w 192.168.167.6 -a 192.168.167.8
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
+[source,cli]
 ----
 nvme connect-all -t tcp -w host-traddr -a traddr
 ----
 +
 .Show example
 [%collapsible]
-====
+=====
 [subs=+quotes]
 ----
 nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.7							
 nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.8 						
 nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.7 						
 nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.8						
-----
-====
+----			
+=====
 
 [NOTE]
 ====
