--- a/nvme-rhel-93.adoc
+++ b/nvme-rhel-93.adoc
@@ -28,7 +28,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 * Features available:
 ** There are no new features in this release.
 * Known limitations: 
-SAN booting using the NVMe-oF protocol is not currently supported.
+** SAN booting using the NVMe-oF protocol is not currently supported.
 
 == Step 1: Optionally, enable SAN booting
 
